<resources>
    <string name="app_name">BloodLine</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="home">Home</string>
    <string name="donorscommun">Donors Community</string>
    <string name="profile">Profile</string>
    <string name="search">Bank Search</string>
    <string name="contact">Contact us</string>
    <string name="google_maps_key">key</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>