<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/donors"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/donorscommun" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/profile" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/search" />

    <item
        android:id="@+id/contact"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/contact" />

</menu>